@@ -966,7 +966,7 @@
 //-- HLIF_HEAL
 8001,0,1000,0,0,1000
 //-- HLIF_AVOID
-8002,0,0,0,40000:35000:30000:25000:20000,0
+8002,0,0,0,40000:35000:30000:25000:20000,40000:45000:50000:55000:60000
 //-- HLIF_CHANGE
 8004,0,0,0,60000:180000:300000,600000:900000:1200000
 //-- HAMI_CASTLE
